[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/base/base_mesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gender/female/base_mesh_female.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gender/male/base_mesh_male.tscn" type="PackedScene" id=4]

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="charview" type="Spatial" parent="."]

[node name="base_mesh" parent="charview" instance=ExtResource( 2 )]

[node name="base_mesh_female" parent="charview" instance=ExtResource( 3 )]

[node name="base_mesh_male" parent="charview" instance=ExtResource( 4 )]

[node name="gui" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="build" type="Button" parent="gui"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 238.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Build"
flat = false
align = 1

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37603, 2.25449 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

